--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "boxen": "^4.0.0",
+    "cfonts": "^2.8.0",
     "chalk": "^2.4.2",
     "querystring": "^0.2.0",
     "yargs": "^15.1.0"
